--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="show-page">
   <div class="show">
-    <%= image_tag @office.photo %>
+    <%= cl_image_tag @office.photo %>
     <%= image_tag @office.user.avatar, class: "show-avatar" %>
   </div>
   <div class="d-flex inline justify-content-between ml-3">
