--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -5,7 +5,7 @@
     <%= image_tag @office.user.avatar, class: "show-avatar" %>
   </div>
   <div class="d-flex inline justify-content-between ml-3">
-    <h2 class="font-weight-normal"><%= @office.name %></h2>
+    <h2 class="font-weight-bold"><%= @office.name %></h2>
     <div class="show-price">
     <h2> <%= humanized_money_with_symbol @office.price %> / Day </h2>
     </div>
