Created the partial form and fixed minor issues in the controller of offices

--- a/app/views/offices/new.html.erb
+++ b/app/views/offices/new.html.erb
@@ -1,92 +1,6 @@
 <div class="container">
   <div class="form-content">
     <h1 align="center">Create an office</h1>
-    <%= simple_form_for @office do |b| %>
-    <div class="row">
-      <div class="col-6">
-        <%= b.input :name, as: :string, placeholder: "Beautiful office" %>
-      </div>
-      <div class="col-6">
-        <%= b.input :type, collection: ["Desk", "Private Office", "Meeting Room"], prompt: "Which type of office?" %>
-      </div>
-    </div>
-    <%= b.input :description %>
-    <%= b.input :capacity, as: :integer %>
-    <%#= b.association :schedules, label: "Available days", as: :check_boxes %>
-    <div class="form-group">
-
-      <legend class="col-form-label pt-0">Available days</legend>
-
-      <input type="hidden" name="office[schedule_ids][]" value="">
-      <div class="schedule-choices">
-        <% Schedule.all.each do |schedule| %>
-
-          <input hidden=true type="checkbox" value="<%= schedule.id %>" name="office[schedule_ids][]" id="office_schedule_ids_<%= schedule.id %>">
-
-          <label class="schedule-choice" for="office_schedule_ids_<%= schedule.id %>"><%= schedule.name %>
-            <i class="fa fa-check"></i>
-          </label>
-
-        <% end %>
-
-      </div>
-
-    </div>
-
-      <!-- <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value=""<%=  %> name="office[schedule_ids][]" id="office_schedule_ids_1">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_1">Monday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="2" name="office[schedule_ids][]" id="office_schedule_ids_2">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_2">Tuesday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="3" name="office[schedule_ids][]" id="office_schedule_ids_3">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_3">Wednesday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="4" name="office[schedule_ids][]" id="office_schedule_ids_4">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_4">Thursday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="5" name="office[schedule_ids][]" id="office_schedule_ids_5">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_5">Friday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="6" name="office[schedule_ids][]" id="office_schedule_ids_6">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_6">Saturday</label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input check_boxes optional" type="checkbox" value="7" name="office[schedule_ids][]" id="office_schedule_ids_7">
-        <label class="form-check-label collection_check_boxes" for="office_schedule_ids_7">Sunday</label>
-      </div>
-    </fieldset> -->
-
-    <%= b.input :price %>
-    <div class="row">
-      <div class="col-6">
-        <%= b.input :coffee_machine %>
-        <%= b.input :smoking_area %>
-        <%= b.input :pets_allowed %>
-        <%= b.input :heater_ac %>
-        <%= b.input :adaptors %>
-
-      </div>
-      <div class="col-6">
-        <%= b.input :wifi %>
-        <%= b.input :printer %>
-        <%= b.input :kitchen %>
-        <%= b.input :terrace %>
-
-      </div>
-
-    </div>
-    <%= b.input :photo %>
-    <%= b.input :photo_cache, as: :hidden %>
-
-
-    <div align="center"><%= b.submit "Save office", class: "btn-ghost mt-4" %>
+    <%= render 'form' %>
     </div>
   </div>
-  <% end %>
