Added autocomplete feature and address input to form

--- a/app/views/offices/_form.html.erb
+++ b/app/views/offices/_form.html.erb
@@ -8,6 +8,7 @@
       </div>
     </div>
     <%= b.input :description %>
+    <%= b.input :address %>
     <%= b.input :capacity, as: :integer %>
     <%#= b.association :schedules, label: "Available days", as: :check_boxes %>
     <div class="form-group">
