--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -67,6 +67,10 @@
               <h2>Location: <%= booking.office.address %></h2>
             </div>
             <div class="card-right">
+              <% if booking.status == "Pending"  %>
+                <%= link_to "<i class='fas fa-check-circle accept'></i>".html_safe, accept_booking_path(booking) %>
+                <%= link_to "<i class='fas fa-times-circle reject'></i>".html_safe, reject_booking_path(booking), class: "reject-icon" %>
+              <% end %>
               <h3>Booking status: <%= booking.status %>  </h3>
             </div>
           </div>
