Button to add booking or office in tab 1 and 3 of dashboard

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -50,6 +50,9 @@
       <% end %>
       <% end %>
       <% end %>
+      <%= link_to offices_path do %>
+        <i class="fas fa-plus-circle add"></i>
+      <% end %>
     </div>
 
     <div class="tab-pane" id="2a">
@@ -108,6 +111,9 @@
       </div>
       <% end %>
       <% end %>
+      <% end %>
+      <%= link_to new_office_path do %>
+        <i class="fas fa-plus-circle add"></i>
       <% end %>
     </div>
   </div>
