--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -27,8 +27,8 @@
               <%= cl_image_tag office.photo %>
               <div class="card-trip-infos">
                 <div>
-                  <h2><%= office.name.truncate_words(4) %></h2>
-                  <p><%= office.description.truncate_words(5) %></p>
+                  <h2><%= office.name.truncate_words(4) %></h2><% if office.capacity != nil %><p style="font-size: 20px;"><strong><%= office.capacity %></strong><i class="fas fa-user"></i></p>
+                <% end %>
                 </div>
                 <strong><p class="card-trip-pricing"><%= humanized_money_with_symbol office.price %>/day</p></strong>
                 <%= image_tag office.user.avatar, class: "card-trip-user avatar-bordered" %>
