Pause to merge latest code

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 #banner-container {
   background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), asset-url('banner-pic.jpg');
-  height: 681px;
+  height: 91vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom 1px right 0px;
