--- a/app/views/offices/new.html.erb
+++ b/app/views/offices/new.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
-  <div class="form-content">
-    <h1 align="center">Create an office</h1>
+<div class="container pl-0 pr-0">
+  <div class="new-form-content">
+    <h2 class="font-weight-bold" align="left">Create an office</h2>
     <%= render 'form' %>
     </div>
   </div>
+
