only text and button styling left

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,9 +35,9 @@
   display: block;
   width: 100%;
   font-style: normal;
-  font-weight: medium;
   text-align: center;
   font-size: 24px;
+  margin-top: 23vh;
 
   &:hover {
 
