--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,7 +8,7 @@
 @import "card_index";
 @import "search_form";
 @import "card_dashboard";
-@import "card_minimal";
+@import "card_city";
 @import "button";
 @import "card_show";
 @import "form_booking_new";
