--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,27 +8,37 @@
   </div>
 </div>
 <div class="container">
-  <div class="mt-3">
-    <%= render 'shared/search'%>
-  </div>
-  <h3 class="mt-3 font-weight-bold">Top offices in your city</h3 class="mt-3">
-      <% @offices.each do |office| %>
-      <div class="card-landing">
-        <%= link_to office_path(office) do %>
-        <div class="card-minimal">
-          <%= cl_image_tag office.photo %>
-          <div class="card-minimal-infos">
-            <div class="card-minimal-text">
-              <h2><%= office.name %></h2>
-              <p><%= office.description.truncate_words(4) %></p>
-            </div>
-            <h2 class="card-minimal-pricing"><%= humanized_money_with_symbol office.price %></h2>
-            <%= image_tag office.user.avatar, class: "card-minimal-user avatar-bordered" %>
-          </div>
-        </div>
 
-      </div>
-      <% end %>
-      <% end %>
+  <h3 class="my-4 font-weight-bold">Top cities for coworking</h3>
 
-  </div>
+  <%= link_to offices_path(queryLocation: "Barcelona") do %>
+    <div class="card-city barcelona" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576596631/barcelona_vwri9g.jpg)">
+      Barcelona
+    </div>
+  <% end %>
+
+  <%= link_to offices_path(queryLocation: "Brussels") do %>
+    <div class="card-city brussels" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576596727/brussels_dpzdna.jpg)">
+      Brussels
+    </div>
+  <% end %>
+
+  <%= link_to offices_path(queryLocation: "London") do %>
+    <div class="card-city london" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path 'london_ovoeqg.jpg' %>)">
+      London
+    </div>
+  <% end %>
+
+  <%= link_to offices_path(queryLocation: "Madrid") do %>
+    <div class="card-city amsterdam" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576603141/madrid_nlqmk5.jpg)">
+      Madrid
+    </div>
+  <% end %>
+
+  <%= link_to offices_path(queryLocation: "Paris") do %>
+    <div class="card-city paris" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576596550/paris_on5aay.jpg)">
+      Paris
+    </div>
+  <% end %>
+
+</div>
