--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -33,7 +33,7 @@
           <%= text_field_tag :queryCapacity,
             params[:queryCapacity],
             class: "form-control search-filter",
-            placeholder: "Capacity"
+            placeholder: "Guests"
           %>
         </div>
       </div>
