--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -23,11 +23,10 @@
         </div>
 
         <div class="col-4">
-          <%= text_field_tag :queryPrice,
-            params[:queryPrice],
-            class: "form-control search-filter",
-            placeholder: "Price"
-          %>
+          <%= select_tag :queryPrice,
+              options_for_select([["Price - Low to High", 1], ["Price - High to Low", 2]]),
+              { class: "form-control search-filter", prompt: "Sort by price"} %>
+
         </div>
          <div class="col-4">
           <%= text_field_tag :queryCapacity,
