--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,6 +11,6 @@
 @import "card_city";
 @import "button";
 @import "card_show";
-@import "form_booking_new";
+@import "form_office_new";
 @import "flatpickr";
 
