--- a/app/assets/stylesheets/components/_form_office_new.scss
+++ b/app/assets/stylesheets/components/_form_office_new.scss
@@ -25,3 +25,10 @@
   opacity: 1;
 }
 
+.upload-photo {
+  border: 1px solid #d3d3d3;
+  padding: 16px 24px;
+  font-weight: 500;
+  background: white;
+  border-radius: 2px;
+}
